Replace Function With File to Promise

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -70,7 +70,7 @@
             Модульный 2
           </td>
           <td class="text-center">
-            <ngx-inok-player file="assets/1.mp3" group="one" [onError]="errorMessage"></ngx-inok-player>
+            <ngx-inok-player [file]="tFile" group="one" [onError]="errorMessage"></ngx-inok-player>
           </td>
         </tr>
 
